project header not wrapping on mobile fixed

--- a/index.css
+++ b/index.css
@@ -202,14 +202,13 @@ a {
 
 .footer {
   display: flex;
-  font-weight: bold;
   margin-bottom: 0.5px;
   letter-spacing: -1px;
   font-size: 1.1em;
   margin-left: 86%;
 }
 
-@media only screen and (max-width:  1200px) {
+@media only screen and (max-width:  1240px) {
   .footer {
     margin-left: 80%;
   }
@@ -222,8 +221,8 @@ a {
   }
 
   header {
-    font-size: 4.5em;
-    letter-spacing: -5px;
+    font-size: 5em;
+    /* letter-spacing: -5px; */
     margin-top: 125px;
   }
 
@@ -329,8 +328,8 @@ a {
   }
 
   header {
-    font-size: 2.5em;
-    letter-spacing: -5px;
+    font-size: 3.5em;
+    /* letter-spacing: -5px; */
     margin-top: 75px;
   }
 
@@ -365,6 +364,18 @@ a {
   }
 }
 
+@media only screen and (max-device-width: 440px) {
+  .smaller-header {
+    margin-left: 18%;
+    margin-top: 20px;
+    font-style: italic;
+    font-weight: bolder;
+    letter-spacing: -4px;
+    font-size: 2.3em;
+    height: 0.90em;
+    line-height: -12px;
+  }
+}
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
 
 /* Portrait and Landscape */
@@ -398,5 +409,9 @@ a {
     }
     .contact:last-child {
       margin-bottom: 350px;
+    }
+    .about-text-div {
+      margin-top: 75px;
+      margin-bottom: 200px;
     }
 }
